# 20220618-learn_CMakePractice

./: README.md
t1/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.cpp
